update url backend

--- a/formulir.html
+++ b/formulir.html
@@ -449,9 +449,9 @@
                         <input
                           type="text"
                           class="form-control"
-                          id="asal-kampus"
-                          name="kampus"
-                          placeholder="Masukkan Asal Sekolah/Kampus"
+                          id="asal-sekolah"
+                          name="sekolah"
+                          placeholder="Masukkan Asal Kampus"
                         />
                       </div>
                     </div>
