--- a/pendaftar.html
+++ b/pendaftar.html
@@ -282,7 +282,7 @@
                             <th class="txt-biru-15">Nama Lengkap</th>
                             <th class="txt-biru-15">Email</th>
                             <th class="txt-biru-15">No Telepon</th>
-                            <th class="txt-biru-15">Asal Sekolah/Kampus</th>
+                            <th class="txt-biru-15">Asal Kampus</th>
                             <th class="txt-biru-18">Bukti Follow</th>
                           </tr>
                         </thead>
