update url backend

--- a/formulir.html
+++ b/formulir.html
@@ -477,10 +477,22 @@
                           name="file"
                           accept=".jpeg,.jpg,.png"
                         />
-                        <label class="custom-file-label" for="buktifollow"
-                          >Upload bukti follow Instagram</label
-                        >
+                        <label class="custom-file-label" for="buktifollow">
+                          Upload bukti follow Instagram
+                        </label>
                       </div>
+                      <!-- Preview Gambar -->
+                      <img
+                        id="preview-bukti"
+                        src=""
+                        alt="Preview Bukti"
+                        style="
+                          display: none;
+                          margin-top: 10px;
+                          max-width: 100%;
+                          border-radius: 8px;
+                        "
+                      />
                     </div>
 
                     <!-- Submit -->
