update url backend

--- a/formulir.html
+++ b/formulir.html
@@ -378,6 +378,7 @@
                     </button>
                   </div>
 
+                  <!-- Form Pendaftaran -->
                   <form
                     role="form"
                     method="post"
@@ -396,7 +397,7 @@
                           type="text"
                           class="form-control"
                           id="nama-lengkap"
-                          name="nama_lengkap"
+                          name="nama-lengkap"
                           placeholder="Nama Lengkap"
                         />
                       </div>
@@ -432,13 +433,13 @@
                           type="text"
                           class="form-control"
                           id="no-telp"
-                          name="telepon"
+                          name="no-telp"
                           placeholder="Masukkan Nomor Telepon"
                         />
                       </div>
                     </div>
 
-                    <!-- Kampus -->
+                    <!-- Asal Sekolah -->
                     <div class="form-group mb-3">
                       <div class="input-group input-group-alternative">
                         <div class="input-group-prepend">
@@ -450,22 +451,12 @@
                           type="text"
                           class="form-control"
                           id="asal-sekolah"
-                          name="sekolah"
+                          name="asal-sekolah"
                           placeholder="Masukkan Asal Kampus"
                         />
                       </div>
                     </div>
                     <br />
-
-                    <!-- Info Instagram -->
-                    <small class="text-uppercase text-muted d-block mb-3">
-                      Pendaftaran ini gratis! Namun, peserta tetap akan
-                      mendapatkan E-sertifikat, relasi, pengalaman, dan ilmu
-                      dari pemateri. Cukup follow Instagram
-                      <b>@coconutdotorg</b> dan lampirkan screenshot sebagai
-                      bukti. <br /><br />
-                      Mudah, bukan? Ayo gabung!
-                    </small>
 
                     <!-- Upload Bukti -->
                     <div class="form-group mb-3">
@@ -474,7 +465,7 @@
                           type="file"
                           class="custom-file-input"
                           id="buktifollow"
-                          name="file"
+                          name="bukti-follow"
                           accept=".jpeg,.jpg,.png"
                         />
                         <label class="custom-file-label" for="buktifollow">
