update url backend

--- a/formulir.html
+++ b/formulir.html
@@ -558,17 +558,26 @@
       src="./assets/js/plugins/nouislider.min.js"
       type="text/javascript"
     ></script>
-    <script src="./assets/js/plugins/moment.min.js"></script>
+    <script
+      src="./assets/js/plugins/moment.min.js"
+      type="text/javascript"
+    ></script>
     <script
       src="./assets/js/plugins/datetimepicker.js"
       type="text/javascript"
     ></script>
-    <script src="./assets/js/plugins/bootstrap-datepicker.min.js"></script>
+    <script
+      src="./assets/js/plugins/bootstrap-datepicker.min.js"
+      type="text/javascript"
+    ></script>
+
+    <!-- Argon JS -->
     <script
       src="./assets/js/argon-design-system.min.js?v=1.2.2"
       type="text/javascript"
     ></script>
-    <script src="./assets/js/formulir.js"></script>
-    <script src="./assets/js/script.js"></script>
+
+    <!-- Custom Form Logic -->
+    <script src="./formulir.js"></script>
   </body>
 </html>
