update url backend

--- a/formulir.html
+++ b/formulir.html
@@ -379,12 +379,7 @@
                   </div>
 
                   <!-- Form Pendaftaran -->
-                  <form
-                    role="form"
-                    method="post"
-                    enctype="multipart/form-data"
-                    id="register-form"
-                  >
+                  <form id="register-form">
                     <!-- Nama -->
                     <div class="form-group mb-3">
                       <div class="input-group input-group-alternative">
