update url backend

--- a/formulir.html
+++ b/formulir.html
@@ -384,15 +384,14 @@
                     <div class="form-group mb-3">
                       <div class="input-group input-group-alternative">
                         <div class="input-group-prepend">
-                          <span class="input-group-text"
-                            ><i class="ni ni-single-02"></i
-                          ></span>
+                          <span class="input-group-text">
+                            <i class="ni ni-single-02"></i>
+                          </span>
                         </div>
                         <input
                           type="text"
                           class="form-control"
                           id="nama-lengkap"
-                          name="nama-lengkap"
                           placeholder="Nama Lengkap"
                         />
                       </div>
@@ -402,15 +401,14 @@
                     <div class="form-group mb-3">
                       <div class="input-group input-group-alternative">
                         <div class="input-group-prepend">
-                          <span class="input-group-text"
-                            ><i class="ni ni-email-83"></i
-                          ></span>
+                          <span class="input-group-text">
+                            <i class="ni ni-email-83"></i>
+                          </span>
                         </div>
                         <input
                           type="email"
                           class="form-control"
                           id="email"
-                          name="email"
                           placeholder="Email"
                         />
                       </div>
@@ -420,15 +418,14 @@
                     <div class="form-group mb-3">
                       <div class="input-group input-group-alternative">
                         <div class="input-group-prepend">
-                          <span class="input-group-text"
-                            ><i class="ni ni-mobile-button"></i
-                          ></span>
+                          <span class="input-group-text">
+                            <i class="ni ni-mobile-button"></i>
+                          </span>
                         </div>
                         <input
                           type="text"
                           class="form-control"
                           id="no-telp"
-                          name="no-telp"
                           placeholder="Masukkan Nomor Telepon"
                         />
                       </div>
@@ -438,15 +435,14 @@
                     <div class="form-group mb-3">
                       <div class="input-group input-group-alternative">
                         <div class="input-group-prepend">
-                          <span class="input-group-text"
-                            ><i class="ni ni-building"></i
-                          ></span>
+                          <span class="input-group-text">
+                            <i class="ni ni-building"></i>
+                          </span>
                         </div>
                         <input
                           type="text"
                           class="form-control"
                           id="asal-sekolah"
-                          name="asal-sekolah"
                           placeholder="Masukkan Asal Kampus"
                         />
                       </div>
@@ -460,7 +456,6 @@
                           type="file"
                           class="custom-file-input"
                           id="buktifollow"
-                          name="bukti-follow"
                           accept=".jpeg,.jpg,.png"
                         />
                         <label class="custom-file-label" for="buktifollow">
