--- a/login.html
+++ b/login.html
@@ -275,7 +275,7 @@
       src="./assets/js/argon-design-system.min.js?v=1.2.2"
       type="text/javascript"
     ></script>
-    <script src="assets/js/login.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
